# app/Http/Controllers/Api/BannerController.php
@@ -9,6 +9,26 @@ use Illuminate\Support\Facades\Log;
 
 class BannerController extends Controller
 {
+  /**
+   * @OA\Get(
+   *     path="/api/v1/banner",
+   *     tags={"Banner"},
+   *     summary="Get list of banner",
+   *     description="Returns list of banner",
+   *     @OA\Response(
+   *         response=200,
+   *         description="successful operation",
+   *         @OA\JsonContent(
+   *             type="array",
+   *             @OA\Items(ref="#/components/schemas/Banner")
+   *         )
+   *     ),
+   *     @OA\Response(
+   *         response=500,
+   *         description="Internal Server Error"
+   *     )
+   * )
+   */
   public function index()
   {
     try {
